--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -14,26 +14,6 @@
 @import "./partials/footer";
 
 @font-face {
-    font-family: "Poppins Light";
-    src: url("../../assets/fonts/poppins-light.ttf");
-}
-
-@font-face {
-    font-family: "Poppins Medium";
-    src: url("../../assets/fonts/poppins-medium.ttf");
-}
-
-@font-face {
-    font-family: "Poppins SemiBold";
-    src: url("../../assets/fonts/poppins-semibold.ttf");
-}
-
-@font-face {
-    font-family: "Kalam Bold";
-    src: url("../../assets/fonts/kalam-bold.ttf");
-}
-
-@font-face {
     font-family: "Source Sans Extra Light";
     src: url("../../assets/fonts/sourcesanspro-extralight.ttf");
 }
@@ -54,11 +34,11 @@
 }
 
 @font-face {
-    font-family: "BC Alphapipe L Regular";
-    src: url("../../assets/fonts/bc-alphapipe-l-regular.ttf");
+    font-family: "Urbanist Light";
+    src: url("../../assets/fonts/urbanist-light.ttf");
 }
 
 @font-face {
-    font-family: "BC Alphapipe RB Bold";
-    src: url("../../assets/fonts/bc-alphapipe-rb-bold.ttf");
+    font-family: "Urbanist Semi Bold";
+    src: url("../../assets/fonts/urbanist-semibold.ttf");
 }
