--- a/src/components/styles/partials/_variables.scss
+++ b/src/components/styles/partials/_variables.scss
@@ -12,15 +12,13 @@ $primary-color: #e087fb;
 $secondary-color: #217f04;
 $white: #ffffff;
 $light-bg: #f2f2f2;
+$light-border: rgba(102, 103, 171, 0.25);
 $gray: #808080;
 $dark-gray: #595959;
 $black: #000000;
 $dark: #222222;
-$design: #fbe087;
-$design-light: #fef9e6;
-$design-chip: #fce59a;
-$development: #87a2fb;
-$development-light: #e6ecfe;
-$development-chip: #c0cefd;
+$projects: #fbe087;
+$projects-light: #fef9e6;
+$projects-chip: #fce59a;
 $box-shadow: rgba(0, 0, 0, 0.12);
 $box-shadow-dark: rgba(0, 0, 0, 0.25);
