--- a/src/components/styles/partials/_footer.scss
+++ b/src/components/styles/partials/_footer.scss
@@ -53,7 +53,11 @@
         svg {
             height: 24px;
             color: $light-bg;
+            transition: all .3s ease-in-out;
 
+            &:hover {
+                color: $primary-color;
+            }
         }
     }
 }
