--- a/src/components/styles/partials/_intro.scss
+++ b/src/components/styles/partials/_intro.scss
@@ -16,6 +16,7 @@
 
     &__img {
         border-radius: 50%;
+        border: 2px solid $projects;
     }
 
     &__text-wrapper {
@@ -65,7 +66,11 @@
         svg {
             height: 24px;
             color: $dark;
-            
+            transition: all .3s ease-in-out;
+           
+            &:hover {
+                color: $primary-color;
+            }
         }
     }
 }
