--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -568,6 +568,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
   height: 16px;
 }
 
+.about {
+  height: 100vh;
+}
 .about__wrapper {
   margin: 0 auto;
   flex-direction: column;
