--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -175,6 +175,10 @@ ul, ol {
   color: #222222;
 }
 
+.home {
+  min-height: 100vh;
+}
+
 /* Header Styles */
 .header {
   position: sticky;
@@ -569,7 +573,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .about {
-  height: 100vh;
+  min-height: 100vh;
 }
 .about__wrapper {
   margin: 0 auto;
