--- a/src/components/styles/partials/_footer.scss
+++ b/src/components/styles/partials/_footer.scss
@@ -55,8 +55,10 @@
             color: $light-bg;
             transition: all .3s ease-in-out;
 
-            &:hover {
-                color: $primary-color;
+            @include tablet {
+                &:hover {
+                    color: $primary-color;
+                }
             }
         }
     }
