--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -70,6 +70,10 @@
     background: $dark;
 }
 
+.bm-burger-bars-hover {
+    opacity: 1 !important;
+}
+
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
     height: 24px;
