--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -109,7 +109,7 @@ ul, ol {
   align-items: center;
 }
 
-.box-shadow, .not-found__btn, .project__img, .card:hover, .header, .chip-btn:hover, .chip-btn--active:hover {
+.box-shadow, .not-found__btn, .project__img, .card:hover, .header {
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -169,10 +169,13 @@ ul, ol {
   color: #222222;
   background-color: #fbe087;
 }
-.chip-btn:hover, .chip-btn--active:hover {
-  transform: scale(1.05);
-  background-color: #fbe087;
-  color: #222222;
+@media (min-width: 768px) {
+  .chip-btn:hover, .chip-btn--active:hover {
+    box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.12);
+    transform: scale(1.05);
+    background-color: #fbe087;
+    color: #222222;
+  }
 }
 
 .home {
@@ -235,6 +238,10 @@ ul, ol {
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
   background: #222222;
+}
+
+.bm-burger-bars-hover {
+  opacity: 1 !important;
 }
 
 /* Position and sizing of clickable cross button */
