Fixed Side Navbar location & styles.

--- a/src/components/styles/partials/_fonts.scss
+++ b/src/components/styles/partials/_fonts.scss
@@ -43,7 +43,7 @@ $urbanist-semi: "Urbanist Semi Bold";
     text-transform: uppercase;
     line-height: 16px * 1.5;
     letter-spacing: 0.08em;
-    color: $white;
+    color: $light-bg;
 }
 
 .h1 {
