--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -27,7 +27,7 @@
   text-transform: uppercase;
   line-height: 24px;
   letter-spacing: 0.08em;
-  color: #ffffff;
+  color: #f2f2f2;
 }
 
 .h1, .intro__h1 {
@@ -262,12 +262,12 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
-  top: 107px;
+  top: 114px;
 }
 
 /* General sidebar styles */
 .bm-menu {
-  background: #e087fb;
+  background: #222222;
   padding: 32px 0;
   font-size: 32px;
 }
