--- a/src/components/styles/partials/_global.scss
+++ b/src/components/styles/partials/_global.scss
@@ -20,7 +20,8 @@ a {
     cursor: pointer;
 }
 
-ul, ol {
+ul,
+ol {
     list-style: none;
 }
 
@@ -32,14 +33,10 @@ ul, ol {
 }
 
 .box-shadow {
-    box-shadow: 0px 4px 4px 2px $box-shadow;
+    box-shadow: 0px 2px 4px $box-shadow;
 }
 
-.box-shadow-light {
-    box-shadow: 0px 4px 4px $box-shadow-dark;
-}
-
-.projects-bg{
+.projects-bg {
     background-color: $projects;
 }
 
