--- a/src/components/styles/partials/_card.scss
+++ b/src/components/styles/partials/_card.scss
@@ -9,7 +9,6 @@
     color: $black;
     border-radius: 8px;
     margin: 0 auto 64px;
-    // justify-content: space-between;
     align-items: flex-start;
     flex-direction: column;
     max-width: 345px;
@@ -44,6 +43,13 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
+        border-top: 1px solid $light-border;
+
+        @include laptop{
+            border-left: 1px solid $light-border;
+            border-top: unset;
+            height: 338px;
+        }
 
         &--title {
             margin-bottom: 8px;
