--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -3,7 +3,6 @@
 .project {
     &__hero {
         padding: 32px;
-        flex-direction: column;
 
         @include tablet {
             padding: 32px 64px;
@@ -41,7 +40,6 @@
     }
 
     &__title {
-        margin-bottom: 24px;
 
         @include tablet {
             font-size: 40px;
@@ -100,14 +98,10 @@
         margin-bottom: 16px;
     }
 
-    &__ctas a {
-        margin-bottom: 24px;
-    }
-
     &__img {
         width: 100%;
         height: auto;
-        @extend .box-shadow;
+        // @extend .box-shadow;
 
         @include small-desktop {
             height: auto;
@@ -118,15 +112,36 @@
     &__nav {
         margin-bottom: 80px;
         display: block;
+
+        @include laptop {
+            padding: 0;
+        }
     }
 
     &__nav-wrap {
         position: relative;
-        width: fit-content;
+        display: block;
+        @extend .nav-mobile;
+        @extend .box-shadow;
+        background-color: $dark;
+        padding: 12px 24px;
+        text-align: center;
+        transition: all .3s ease-in-out;
+        border: 4px solid $dark;
+    
+        @include tablet {
+            max-width: 280px;
+            width: fit-content;
+    
+            &:hover {
+                background-color: $primary-color;
+                color: $dark;
+                border: 4px solid $primary-color;
+            }
+        }
     }
 
     &__nav-wrap span {
-        @extend .nav-menu;
         margin-left: 8px;
     }
 
